APIs/microsoft.com/cognitiveservices-Training/1.2/javascript-client/README.md
# training_api

TrainingApi - JavaScript client for training_api
No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.2
- Package version: 1.2
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install training_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your training_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var TrainingApi = require('training_api');


var api = new TrainingApi.AccountApiApi()
var trainingKey = "{API Key}"; // {String} 
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.getAccountInfo(trainingKey, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://southcentralus.api.cognitive.microsoft.com/customvision/v1.2/Training*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*TrainingApi.AccountApiApi* | [**getAccountInfo**](docs/AccountApiApi.md#getAccountInfo) | **GET** /account | Get basic information about your account
*TrainingApi.DomainsApiApi* | [**getDomain**](docs/DomainsApiApi.md#getDomain) | **GET** /domains/{domainId} | Get information about a specific domain
*TrainingApi.DomainsApiApi* | [**getDomains**](docs/DomainsApiApi.md#getDomains) | **GET** /domains | Get a list of the available domains
*TrainingApi.ImageApiApi* | [**createImagesFromData**](docs/ImageApiApi.md#createImagesFromData) | **POST** /projects/{projectId}/images | Add the provided images to the set of training images
*TrainingApi.ImageApiApi* | [**createImagesFromFiles**](docs/ImageApiApi.md#createImagesFromFiles) | **POST** /projects/{projectId}/images/files | Add the provided batch of images to the set of training images
*TrainingApi.ImageApiApi* | [**createImagesFromPredictions**](docs/ImageApiApi.md#createImagesFromPredictions) | **POST** /projects/{projectId}/images/predictions | Add the specified predicted images to the set of training images
*TrainingApi.ImageApiApi* | [**createImagesFromUrls**](docs/ImageApiApi.md#createImagesFromUrls) | **POST** /projects/{projectId}/images/urls | Add the provided images urls to the set of training images
*TrainingApi.ImageApiApi* | [**deleteImageTags**](docs/ImageApiApi.md#deleteImageTags) | **DELETE** /projects/{projectId}/images/tags | Remove a set of tags from a set of images
*TrainingApi.ImageApiApi* | [**deleteImages**](docs/ImageApiApi.md#deleteImages) | **DELETE** /projects/{projectId}/images | Delete images from the set of training images
*TrainingApi.ImageApiApi* | [**getTaggedImages**](docs/ImageApiApi.md#getTaggedImages) | **GET** /projects/{projectId}/images/tagged | Get tagged images for a given project iteration
*TrainingApi.ImageApiApi* | [**getUntaggedImages**](docs/ImageApiApi.md#getUntaggedImages) | **GET** /projects/{projectId}/images/untagged | Get untagged images for a given project iteration
*TrainingApi.ImageApiApi* | [**postImageTags**](docs/ImageApiApi.md#postImageTags) | **POST** /projects/{projectId}/images/tags | Associate a set of images with a set of tags
*TrainingApi.PredictionsApiApi* | [**deletePrediction**](docs/PredictionsApiApi.md#deletePrediction) | **DELETE** /projects/{projectId}/predictions | Delete a set of predicted images and their associated prediction results
*TrainingApi.PredictionsApiApi* | [**queryPredictionResults**](docs/PredictionsApiApi.md#queryPredictionResults) | **POST** /projects/{projectId}/predictions/query | Get images that were sent to your prediction endpoint
*TrainingApi.PredictionsApiApi* | [**quickTestImage**](docs/PredictionsApiApi.md#quickTestImage) | **POST** /projects/{projectId}/quicktest/image | Quick test an image
*TrainingApi.PredictionsApiApi* | [**quickTestImageUrl**](docs/PredictionsApiApi.md#quickTestImageUrl) | **POST** /projects/{projectId}/quicktest/url | Quick test an image url
*TrainingApi.ProjectApiApi* | [**createProject**](docs/ProjectApiApi.md#createProject) | **POST** /projects | Create a project
*TrainingApi.ProjectApiApi* | [**deleteIteration**](docs/ProjectApiApi.md#deleteIteration) | **DELETE** /projects/{projectId}/iterations/{iterationId} | Delete a specific iteration of a project
*TrainingApi.ProjectApiApi* | [**deleteProject**](docs/ProjectApiApi.md#deleteProject) | **DELETE** /projects/{projectId} | Delete a specific project
*TrainingApi.ProjectApiApi* | [**exportIteration**](docs/ProjectApiApi.md#exportIteration) | **POST** /projects/{projectId}/iterations/{iterationId}/export | Export a trained iteration
*TrainingApi.ProjectApiApi* | [**getExports**](docs/ProjectApiApi.md#getExports) | **GET** /projects/{projectId}/iterations/{iterationId}/export | Get the list of exports for a specific iteration
*TrainingApi.ProjectApiApi* | [**getIteration**](docs/ProjectApiApi.md#getIteration) | **GET** /projects/{projectId}/iterations/{iterationId} | Get a specific iteration
*TrainingApi.ProjectApiApi* | [**getIterationPerformance**](docs/ProjectApiApi.md#getIterationPerformance) | **GET** /projects/{projectId}/iterations/{iterationId}/performance | Get detailed performance information about a trained iteration
*TrainingApi.ProjectApiApi* | [**getIterations**](docs/ProjectApiApi.md#getIterations) | **GET** /projects/{projectId}/iterations | Get iterations for the project
*TrainingApi.ProjectApiApi* | [**getProject**](docs/ProjectApiApi.md#getProject) | **GET** /projects/{projectId} | Get a specific project
*TrainingApi.ProjectApiApi* | [**getProjects**](docs/ProjectApiApi.md#getProjects) | **GET** /projects | Get your projects
*TrainingApi.ProjectApiApi* | [**trainProject**](docs/ProjectApiApi.md#trainProject) | **POST** /projects/{projectId}/train | Queues project for training
*TrainingApi.ProjectApiApi* | [**updateIteration**](docs/ProjectApiApi.md#updateIteration) | **PATCH** /projects/{projectId}/iterations/{iterationId} | Update a specific iteration
*TrainingApi.ProjectApiApi* | [**updateProject**](docs/ProjectApiApi.md#updateProject) | **PATCH** /projects/{projectId} | Update a specific project
*TrainingApi.TagsApiApi* | [**createTag**](docs/TagsApiApi.md#createTag) | **POST** /projects/{projectId}/tags | Create a tag for the project
*TrainingApi.TagsApiApi* | [**deleteTag**](docs/TagsApiApi.md#deleteTag) | **DELETE** /projects/{projectId}/tags/{tagId} | Delete a tag from the project
*TrainingApi.TagsApiApi* | [**getTag**](docs/TagsApiApi.md#getTag) | **GET** /projects/{projectId}/tags/{tagId} | Get information about a specific tag
*TrainingApi.TagsApiApi* | [**getTags**](docs/TagsApiApi.md#getTags) | **GET** /projects/{projectId}/tags | Get the tags for a given project and iteration
*TrainingApi.TagsApiApi* | [**updateTag**](docs/TagsApiApi.md#updateTag) | **PATCH** /projects/{projectId}/tags/{tagId} | Update a tag


## Documentation for Models

 - [TrainingApi.Account](docs/Account.md)
 - [TrainingApi.AccountQuota](docs/AccountQuota.md)
 - [TrainingApi.ApiKeys](docs/ApiKeys.md)
 - [TrainingApi.Domain](docs/Domain.md)
 - [TrainingApi.Export](docs/Export.md)
 - [TrainingApi.Image](docs/Image.md)
 - [TrainingApi.ImageCreateResult](docs/ImageCreateResult.md)
 - [TrainingApi.ImageCreateSummary](docs/ImageCreateSummary.md)
 - [TrainingApi.ImageFileCreateBatch](docs/ImageFileCreateBatch.md)
 - [TrainingApi.ImageFileCreateEntry](docs/ImageFileCreateEntry.md)
 - [TrainingApi.ImageIdCreateBatch](docs/ImageIdCreateBatch.md)
 - [TrainingApi.ImageIdCreateEntry](docs/ImageIdCreateEntry.md)
 - [TrainingApi.ImagePredictionResult](docs/ImagePredictionResult.md)
 - [TrainingApi.ImageTag](docs/ImageTag.md)
 - [TrainingApi.ImageTagCreateBatch](docs/ImageTagCreateBatch.md)
 - [TrainingApi.ImageTagCreateEntry](docs/ImageTagCreateEntry.md)
 - [TrainingApi.ImageTagCreateSummary](docs/ImageTagCreateSummary.md)
 - [TrainingApi.ImageTagPrediction](docs/ImageTagPrediction.md)
 - [TrainingApi.ImageUrl](docs/ImageUrl.md)
 - [TrainingApi.ImageUrlCreateBatch](docs/ImageUrlCreateBatch.md)
 - [TrainingApi.ImageUrlCreateEntry](docs/ImageUrlCreateEntry.md)
 - [TrainingApi.Iteration](docs/Iteration.md)
 - [TrainingApi.IterationPerformance](docs/IterationPerformance.md)
 - [TrainingApi.KeyPair](docs/KeyPair.md)
 - [TrainingApi.PerProjectQuota](docs/PerProjectQuota.md)
 - [TrainingApi.Prediction](docs/Prediction.md)
 - [TrainingApi.PredictionQuery](docs/PredictionQuery.md)
 - [TrainingApi.PredictionQueryTag](docs/PredictionQueryTag.md)
 - [TrainingApi.PredictionQueryToken](docs/PredictionQueryToken.md)
 - [TrainingApi.PredictionTag](docs/PredictionTag.md)
 - [TrainingApi.Project](docs/Project.md)
 - [TrainingApi.ProjectSettings](docs/ProjectSettings.md)
 - [TrainingApi.Quota](docs/Quota.md)
 - [TrainingApi.Tag](docs/Tag.md)
 - [TrainingApi.TagList](docs/TagList.md)
 - [TrainingApi.TagPerformance](docs/TagPerformance.md)


## Documentation for Authorization

Endpoints do not require authorization.

